--- a/src/DevIO.Infra/DevIO.Infra.csproj
+++ b/src/DevIO.Infra/DevIO.Infra.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Data\Mappings\ProdutoConfig.cs" />
     <Compile Include="Data\Migrations\Configuration.cs" />
     <Compile Include="Data\Repository\EnderecoRepository.cs" />
-    <Compile Include="Data\Repository\FrnecedorRepository.cs" />
+    <Compile Include="Data\Repository\FornecedorRepository.cs" />
     <Compile Include="Data\Repository\ProdutoRepository.cs" />
     <Compile Include="Data\Repository\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
